fixing misaligned button style

--- a/app/src/components/Products.css
+++ b/app/src/components/Products.css
@@ -38,10 +38,13 @@
 
 .product-card button {
   background-color: #6121f7;
-  width: 80%;
   position: absolute;
   color: white;
-  bottom: 15px;
+  margin: auto;
+  width: 80%;
+  bottom: 10px;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
